--- a/asap/asap_default_config.yaml
+++ b/asap/asap_default_config.yaml
@@ -3,6 +3,19 @@ obs_dir: '../data/s16a_massive_wide2'
 obs_cat: 's16a_wide2_massive_fsps1_imgsub_use_short.fits'
 obs_wl_sample: 's16a_wide2_massive_boxbin3_default'
 
+# Volume:
+obs_area: 145.0
+
 # Cosmology
 obs_h0: 0.70
 obs_omega_m: 0.307
+
+# SMF
+obs_smf_inn: 's16a_wide2_massive_smf_m10_11.5.fits'
+obs_smf_tot: 's16a_wide2_massive_smf_mmax_11.5.fits'
+obs_smf_full_fits: 'primus_smf_z0.3_0.4.fits'
+
+# Useful information in the catalog
+obs_z_col: 'z_best'
+obs_minn_col: 'logm_10'
+obs_mtot_col: 'logm_max'
