--- a/asap/asap_test_config.yaml
+++ b/asap/asap_test_config.yaml
@@ -28,8 +28,9 @@ obs_h0: 0.70
 obs_omega_m: 0.307
 
 # SMF
-obs_smf_inn: 's16a_wide2_massive_smf_m10_11.5.fits'
-obs_smf_tot: 's16a_wide2_massive_smf_mmax_11.5.fits'
+obs_smf_inn: 's16a_wide2_massive_smf_m10_new.fits'
+obs_smf_tot: 's16a_wide2_massive_smf_mmax_new.fits'
+obs_smf_cov: 's16a_wide2_massive_smf_mmax_m10_cov.npy'
 obs_smf_full_fits: 'primus_smf_z0.3_0.4.fits'
 
 # Useful information in the catalog
