--- a/asap/asap_default_config.yaml
+++ b/asap/asap_default_config.yaml
@@ -28,15 +28,15 @@ obs_h0: 0.70
 obs_omega_m: 0.307
 
 # SMF
-obs_smf_inn: 's16a_wide2_massive_smf_m10_new.fits'
-obs_smf_tot: 's16a_wide2_massive_smf_mmax_new.fits'
-obs_smf_cov: 's16a_wide2_massive_smf_mmax_m10_cov.npy'
+obs_smf_inn: 's16a_wide2_massive_smf_m10_new.npy'
+obs_smf_tot: 's16a_wide2_massive_smf_m100_new.npy'
+obs_smf_cov: 's16a_wide2_massive_smf_m100_m10_cov.npy'
 obs_smf_full_fits: 'primus_smf_z0.3_0.4.fits'
 
 # Useful information in the catalog
 obs_z_col: 'z_best'
 obs_minn_col: 'logm_10'
-obs_mtot_col: 'logm_max'
+obs_mtot_col: 'logm_100'
 
 # UniverseMachine
 um_dir: '../data/s16a_massive_wide2/um2'
