--- a/asap/asap_test_config.yaml
+++ b/asap/asap_test_config.yaml
@@ -1,7 +1,7 @@
 # Model parameters
-model_type: 'frac5'
-# param_ini: [0.599, 3.669, -0.048, 0.020, 0.80, 0.00, 0.10]
-param_ini: [0.599, 3.669, -0.048, 0.020, 0.02, 0.80, 0.00, 0.10]
+model_type: 'frac4'
+param_ini: [0.60, 3.65, -0.048, 0.020, 0.80, 0.00, 0.10]
+# param_ini: [0.599, 3.669, -0.048, 0.020, 0.02, 0.80, 0.00, 0.10]
 
 # MCMC Runs
 mcmc_prefix: 'asap_smdpl'
@@ -28,7 +28,7 @@ obs_omega_m: 0.307
 # SMF
 obs_smf_inn: 's16a_wide2_massive_smf_m10_new.npy'
 obs_smf_tot: 's16a_wide2_massive_smf_mmax_new.npy'
-#obs_smf_cov: 's16a_wide2_massive_smf_mmax_m10_cov.npy'
+obs_smf_cov: 's16a_wide2_massive_smf_mmax_m10_cov.npy'
 obs_smf_full_fits: 'primus_smf_z0.3_0.4.fits'
 
 # Useful information in the catalog
@@ -53,5 +53,5 @@ um_mtot_nbin: 80
 um_mtot_nbin_min: 7
 um_min_nobj_per_bin: 30
 um_min_scatter: 0.01
-um_halo_col: 'logmh_vir'
+um_halo_col: 'logmh_host'
 um_star_col: 'logms_tot'
