--- a/note/test/asap_smdpl_mmax_m10_frac1_test_1.yaml
+++ b/note/test/asap_smdpl_mmax_m10_frac1_test_1.yaml
@@ -5,13 +5,13 @@ param_sig: [0.2, 0.5, 0.05, 0.02, 0.1, 0.1]
 
 # MCMC Runs
 mcmc_nthreads: 12
-mcmc_nsamples: 500
-mcmc_nburnin: 600
-mcmc_nwalkers: 400
+mcmc_nsamples: 400
+mcmc_nburnin: 300
+mcmc_nwalkers: 512
 mcmc_smf_only: False
 mcmc_wl_only: False
 mcmc_wl_weight: 1.0
-mcmc_out_dir: "/Users/song/Downloads/asap_test/"
+mcmc_out_dir: "./"
 mcmc_prefix: "asap_smdpl_mmax_m10_frac1_test_1"
 
 # HSC data part
