--- a/note/test/asap_mmax_m10_frac6_test_B.yaml
+++ b/note/test/asap_mmax_m10_frac6_test_B.yaml
@@ -1,29 +1,31 @@
 # Model parameters
-model_type: 'frac4'
+model_type: 'frac6'
 model_prob: True
 
-param_ini: [0.60, 3.60, -0.05, 0.08, 0.70,  0.00, 0.10]
-param_low: [0.30, 1.00, -0.25, 0.01, 0.20, -0.30, 0.00]
-param_upp: [0.90, 6.00,  0.00, 0.20, 1.00,  0.10, 0.30]
-param_sig: [0.20, 0.50,  0.02, 0.10, 0.15,  0.05, 0.10]
+param_ini: [0.66, 2.97,  0.06, 0.15, -0.30,  0.10, -0.22,  0.03, -0.39, 0.39]
+param_low: [0.40, 1.00, -0.15, 0.00, -0.60, -0.20, -0.40, -0.05, -0.55, 0.10]
+param_upp: [0.80, 5.00,  0.15, 0.25,  0.20,  1.00,  0.20,  0.40,  0.20, 1.00]
+param_sig: [0.15, 0.50,  0.05, 0.10,  0.15,  0.20,  0.10,  0.10,  0.10, 0.20]
 
 # MCMC Runs
-mcmc_nthreads: 30
-mcmc_nsamples: 300
-mcmc_nburnin: 400
-mcmc_nwalkers: 256
+mcmc_nthreads: 20
+mcmc_nsamples: 200
+mcmc_nburnin: 800
+mcmc_nwalkers: 512
+mcmc_nwalkers_burnin: 256
 mcmc_smf_only: False
 mcmc_wl_only: False
 mcmc_wl_weight: 1.0
 mcmc_out_dir: "./"
-mcmc_prefix: "asap_smdpl_mmax_m10_frac4_test_9"
-mcmc_moves: "stretch"
-mcmc_stretch_a: 4
+mcmc_prefix: "asap_mmax_m10_frac6_test_B"
+mcmc_moves_burnin: "snooker"
+mcmc_moves: "kde"
+mcmc_stretch_a: 6
 
 obs_z_col: 'z_best'
 obs_minn_col: 'logm_10'
 obs_mtot_col: 'logm_max'
-um_halo_col: 'logmh_vir'
+um_halo_col: 'logmh_host'
 um_star_col: 'logms_tot'
 
 #obs_dir: '/home/shuang/work/hsc_um2/data/s16a_massive_wide2'
@@ -36,18 +38,18 @@ obs_cat: 's16a_wide2_massive_fsps1_imgsub_use_short.fits'
 obs_wl_sample: 's16a_wide2_massive_boxbin7_default'
 obs_smf_tot: 's16a_wide2_massive_smf_mmax_11.6.npy'
 obs_smf_inn: 's16a_wide2_massive_smf_m10_11.6.npy'
-# obs_smf_cov: 's16a_wide2_massive_smf_mmax_m10_cov.npy' 
+obs_smf_cov: 's16a_wide2_massive_smf_mmax_m10_cov.npy' 
 obs_smf_full_fits: 'primus_smf_z0.3_0.4.fits'
 
 um_model: 'um_smdpl_0.7124_new_vagc_mpeak_11.5.npy'
 um_wl_cat: 'um_smdpl_0.7124_new_vagc_mpeak_11.5_50m_r_0.08_50_22bins.npy'
 
 # Volume:
-obs_area: 145.0
+obs_area: 143.7
 
 # Cosmology
 obs_h0: 0.70
-obs_omega_m: 0.307
+obs_omega_m: 0.30
 
 # UniverseMachine
 um_lbox: 400.0
