--- a/asap/asap_default_config.yaml
+++ b/asap/asap_default_config.yaml
@@ -1,24 +1,51 @@
+# Flavor of the model
+model:
+  type: 'frac4'
+  prob: True
+
 # Model parameters
-model_type: 'frac4'
-param_ini: [0.599, 3.669, -0.048, 0.020, 0.80, 0.11]
-param_low: [0.2, 0.0, -0.2, 0.0, 0.3, 0.0]
-param_upp: [1.0, 8.0, 0.0, 0.2, 1.0, 0.3]
-param_sig: [0.05, 0.1, 0.02, 0.005, 0.05, 0.05]
+param:
+  ini: [0.60, 3.71,  0.00, 0.03, 0.57, -0.20, 0.05]
+  low: [0.20, 1.00, -0.25, 0.01, 0.20, -0.40, 0.00]
+  upp: [1.00, 6.00,  0.02, 0.20, 1.00,  0.20, 0.40]
+  sig: [0.25, 1.00,  0.05, 0.20, 0.30,  0.15, 0.15]
 
 # MCMC Runs
-mcmc_prefix: 'asap_smdpl'
-mcmc_nsamples: 200
-mcmc_nthreads: 2
+mcmc_nthreads: 8
+mcmc_nsamples: 100
 mcmc_nburnin: 100
-mcmc_nwalkers: 128
+mcmc_nwalkers: 400
+mcmc_nwalkers_burnin: 128
 mcmc_smf_only: False
 mcmc_wl_only: False
 mcmc_wl_weight: 1.0
+mcmc_out_dir: "./"
+mcmc_prefix: "asap_mmax_m10_frac4_test_A"
+mcmc_moves_burnin: "stretch"
+mcmc_moves: "kde"
+mcmc_stretch_a: 6
+
+obs_z_col: 'z_best'
+obs_minn_col: 'logm_10'
+obs_mtot_col: 'logm_max'
+um_halo_col: 'logmh_host'
+um_star_col: 'logms_tot'
+
+#obs_dir: '/home/shuang/work/hsc_um2/data/s16a_massive_wide2'
+#um_dir: '/home/shuang/work/hsc_um2/data/s16a_massive_wide2/um2'
+obs_dir: '/Users/song/Dropbox/work/project/hsc_um2/data/s16a_massive_wide2'
+um_dir: '/Users/song/Dropbox/work/project/hsc_um2/data/s16a_massive_wide2/um2'
 
 # HSC data part
-obs_dir: '../data/s16a_massive_wide2'
 obs_cat: 's16a_wide2_massive_fsps1_imgsub_use_short.fits'
-obs_wl_sample: 's16a_wide2_massive_boxbin3_default'
+obs_wl_sample: 's16a_wide2_massive_boxbin7_default'
+obs_smf_tot: 's16a_wide2_massive_smf_mmax_11.6.npy'
+obs_smf_inn: 's16a_wide2_massive_smf_m10_11.6.npy'
+#obs_smf_cov: 's16a_wide2_massive_smf_mmax_m10_cov.npy'
+obs_smf_full_fits: 'primus_smf_z0.3_0.4.fits'
+
+um_model: 'um_smdpl_0.7124_new_vagc_mpeak_11.5.npy'
+um_wl_cat: 'um_smdpl_0.7124_new_vagc_mpeak_11.5_50m_r_0.08_50_22bins.npy'
 
 # Volume:
 obs_area: 145.0
@@ -27,25 +54,11 @@ obs_area: 145.0
 obs_h0: 0.70
 obs_omega_m: 0.307
 
-# SMF
-obs_smf_inn: 's16a_wide2_massive_smf_m10_new.npy'
-obs_smf_tot: 's16a_wide2_massive_smf_m100_new.npy'
-obs_smf_cov: 's16a_wide2_massive_smf_m100_m10_cov.npy'
-obs_smf_full_fits: 'primus_smf_z0.3_0.4.fits'
-
-# Useful information in the catalog
-obs_z_col: 'z_best'
-obs_minn_col: 'logm_10'
-obs_mtot_col: 'logm_100'
-
 # UniverseMachine
-um_dir: '../data/s16a_massive_wide2/um2'
 um_lbox: 400.0
 um_h0: 0.678
 um_omega_m: 0.307
-um_model: 'um_smdpl_0.7124_new_vagc_mpeak_11.5.npy'
-um_wl_cat: 'um_smdpl_0.7124_new_vagc_mpeak_11.5_50m_r_0.08_50_22bins.npy'
-um_min_mvir: 11.5
+um_min_mvir: 12.0
 um_redshift: 0.3637
 um_wl_minr: 0.08
 um_wl_maxr: 50.0
@@ -55,5 +68,4 @@ um_mtot_nbin: 80
 um_mtot_nbin_min: 7
 um_min_nobj_per_bin: 30
 um_min_scatter: 0.01
-um_halo_col: 'logmh_vir'
-um_star_col: 'logms_tot'
+
