--- a/asap/default_config.yaml
+++ b/asap/default_config.yaml
@@ -1,82 +1,72 @@
-# Flavor of the model
-model:
-    type: 'frac4'
-    prob: True
-
-# Model parameters
-# Slope of the TSHMR
-param_1:
-   name: 'a'
-   ini: 0.60
-   type: 'student'
-   min: 0.0
-   max: 1.0
-   sig: 0.25
-
-# Intercept of the TSHMR
-# TODO: The value here will change if we decide to normalize the relation
-param_2:
-   name: 'b'
-   ini: 3.70
-   type: 'flat'
-   min: 1.00
-   max: 6.00
-   sig: 1.00
-
-# Slope of the Mhalo-sigma relation
-param_3:
-   name: 'c'
-   ini: 0.00
-   type: 'student'
-   min: -0.20
-   max: 0.10
-   sig: 0.05
-
-# Intercept of the Mhalo-sigma relation
-param_4:
-   name: 'd'
-   ini: 0.03
-   type: 'flat'
-   min: 0.00
-   max: 0.20
-   sig: 0.05
-
-# Fraction of in-situ mass in the inner 10 kpc
-param_5:
-   name: 'fins'
-   ini: 0.57
-   type: 'flat'
-   min: 0.30
-   max: 1.00
-   sig: 0.25
-
-# Slope of the Mhalo-f_ex-situ relation
-param_6:
-   name: 'a_exs'
-   ini: -0.20
-   type: 'student'
-   min: -0.40
-   max: 0.20
-   sig: 0.15
-
-# Intercept of the Mhalo-f_ex-situ relation
-param_7:
-   name: 'b_exs'
-   ini: 0.05
-   type: 'flat'
-   min: 0.00
-   max: 0.50
-   sig: 0.25
+parameters:
+    # Model parameters
+    # Slope of the TSHMR
+    param_1:
+        name: 'a'
+        ini: 0.60
+        type: 'student'
+        min: 0.0
+        max: 1.0
+        sig: 0.25
+    # Intercept of the TSHMR
+    # TODO: The value here will change if we decide to normalize the relation
+    param_2:
+        name: 'b'
+        ini: 3.70
+        type: 'flat'
+        min: 1.00
+        max: 6.00
+        sig: 1.00
+    # Slope of the Mhalo-sigma relation
+    param_3:
+        name: 'c'
+        ini: 0.00
+        type: 'student'
+        min: -0.20
+        max: 0.10
+        sig: 0.05
+    # Intercept of the Mhalo-sigma relation
+    param_4:
+        name: 'd'
+        ini: 0.03
+        type: 'flat'
+        min: 0.00
+        max: 0.20
+        sig: 0.05
+    # Fraction of in-situ mass in the inner 10 kpc
+    param_5:
+        name: 'fins'
+        ini: 0.57
+        type: 'flat'
+        min: 0.30
+        max: 1.00
+        sig: 0.25
+    # Slope of the Mhalo-f_ex-situ relation
+    param_6:
+        name: 'a_exs'
+        ini: -0.20
+        type: 'student'
+        min: -0.40
+        max: 0.20
+        sig: 0.15
+    # Intercept of the Mhalo-f_ex-situ relation
+    param_7:
+        name: 'b_exs'
+        ini: 0.05
+        type: 'flat'
+        min: 0.00
+        max: 0.50
+        sig: 0.25
 
 # About observations
 obs:
-    dir: '/Users/song/Dropbox/work/project/hsc_um2/data/s16a_massive_wide2'
-    cat: 's16a_wide2_massive_fsps1_imgsub_use_short.fits'
-    wl_sample: 's16a_wide2_massive_boxbin7_default'
+    dir: '/Users/song/Dropbox/work/project/asap/data/s16a_massive_wide2'
+    galaxy: 's16a_wide2_massive_fsps1_imgsub_use_short.fits'
+    dsigma: 's16a_wide2_massive_boxbin7_default_dsigma_results.pkl'
     smf_tot: 's16a_wide2_massive_smf_mmax_11.6.npy'
     smf_inn: 's16a_wide2_massive_smf_m10_11.6.npy'
     smf_cov: 's16a_wide2_massive_smf_mmax_m10_cov.npy'
-    smf_full_fits: 'primus_smf_z0.3_0.4.fits'
+    smf_full: 'primus_smf_z0.3_0.4.fits'
     z_col: 'z_best'
     minn_col: 'logm_10'
     mtot_col: 'logm_max'
@@ -86,9 +76,9 @@ obs:
 
 # About the UniverseMachine model
 um:
-    dir: '/Users/song/Dropbox/work/project/hsc_um2/data/s16a_massive_wide2/um2'
-    model: 'um_smdpl_0.7124_new_vagc_mpeak_11.5.npy'
-    wl_cat: 'um_smdpl_0.7124_new_vagc_mpeak_11.5_50m_r_0.08_50_22bins.npy'
+    dir: '/Users/song/Dropbox/work/project/asap/data/s16a_massive_wide2/um2'
+    galaxy: 'um_smdpl_0.7124_new_vagc_mpeak_11.5.npy'
+    dsigma: 'um_smdpl_0.7124_new_vagc_mpeak_11.5_50m_r_0.08_50_22bins.npy'
     halo_col: 'logmh_host'
     star_col: 'logms_tot'
     # Do not change anything below unless you know what you are doing.
@@ -122,3 +112,8 @@ emcee:
     smf_only: False
     wl_only: False
     wl_weight: 1.0
+
+# Flavor of the model
+model:
+    type: 'frac4'
+    prob: True
