--- a/asap/default_config.yaml
+++ b/asap/default_config.yaml
@@ -69,7 +69,8 @@ parameters:
 obs:
     dir: '/Users/song/Dropbox/work/project/asap/data/s16a_massive_wide2'
     galaxy: 's16a_wide2_massive_fsps1_imgsub_use_short.fits'
-    dsigma: 's16a_wide2_massive_boxbin7_default_dsigma_results.pkl'
+    # dsigma: 's16a_wide2_massive_boxbin7_default_dsigma_results.pkl'
+    dsigma: 's16a_wide2_dsigma_logm11.6_12_bins.npy'
     smf_tot: 's16a_wide2_massive_smf_mmax_11.6.npy'
     smf_inn: 's16a_wide2_massive_smf_m10_11.6.npy'
     smf_cov: 's16a_wide2_massive_smf_mmax_m10_cov.npy'
