Add the galaxy catalog

--- a/data/.gitignore
+++ b/data/.gitignore
@@ -1,7 +1,9 @@
 umachine
 asap_smdpl_mock_default.fits
+s16a_massive_lens_prep_new.fits
 s16a_wide2_massive_fsps1_imgsub_use_short.fits
 s16a_wide2_massive_fsps1_imgsub_use_mvir_added.fits
 s16a_wide2_massive_fsps1_imgsub_use_mvir_added_camira_new.fits
 s16a_wide2_massive_fsps1_imgsub_use_mvir_added_camira_new_matched.fits
+s16a_wide2_massive_fsps1_imgsub_use_mvir_added_camira_hsc_redmapper.fits
 *.pkl
