--- a/model/asap_test_1.yaml
+++ b/model/asap_test_1.yaml
@@ -48,24 +48,24 @@ parameters:
     param_6:
         name: 'a_exs'
         label: r'$A_{\mathrm{exs}}$'
-        ini: -0.18
+        ini: -0.16
         type: 'student'
         min: -0.40
         max: 0.20
-        sig: 0.08
+        sig: 0.10
     # Intercept of the Mhalo-f_ex-situ relation
     param_7:
         name: 'b_exs'
         label: r'$B_{\mathrm{exs}}$'
         ini: 0.40
         type: 'flat'
-        min: 0.00
-        max: 0.40
+        min: 0.10
+        max: 0.80
         sig: 0.15
 
 # About observations
 obs:
-    dir: '../data/'
+    dir: '/Users/song/Dropbox/work/project/asap/data/'
     galaxy: 's16a_wide2_massive_fsps1_imgsub_use_short.fits'
     dsigma: 's16a_wide2_dsigma_logm11.6_12_bins.npy'
     smf_tot: 's16a_wide2_massive_smf_mmax_11.6.npy'
@@ -81,7 +81,7 @@ obs:
 
 # About the UniverseMachine model
 um:
-    dir: '../data/umachine'
+    dir: '/Users/song/Dropbox/work/project/asap/data/umachine'
     galaxy: 'um_smdpl_insitu_exsitu_0.7124_basic_logmp_11.5_short.npy'
     dsigma: 'um_smdpl_insitu_exsitu_0.7124_basic_logmp_11.5_50m_r_0.08_50_22bins.npy'
     logmh_col: 'logmh_host'
