Update a few notebooks

--- a/data/.gitignore
+++ b/data/.gitignore
@@ -1,5 +1,6 @@
 umachine
 asap_smdpl_mock_default.fits
+asap_smdpl_mock_test.fits
 s16a_massive_lens_prep_new.fits
 s16a_wide2_massive_fsps1_imgsub_use_short.fits
 s16a_wide2_massive_fsps1_imgsub_use_mvir_added.fits
